[package]
name = "mongodm"
version = "0.9.0"
authors = ["Benoît CORTIER <benoit.cortier@fried-world.eu>"]
edition = "2018"
description = "A thin ODM layer for mongodb"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Devolutions/mongodm-rs"
keywords = ["mongodb", "database", "nosql", "odm"]
categories = ["database"]
readme = "README.md"
include = ["src/**/*", "README.md", "CHANGELOG.md"]

[dependencies]
mongodb = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"] }
futures-core = "0.3"
futures-util = "0.3"
async-trait = "0.1"

[dev-dependencies]
tokio = "1.14.0"
pretty_assertions = "1.0.0"
chrono = { version = "0.4.19", features = [ "serde" ] }

[features]
default = ["tokio-runtime"]
tokio-runtime = ["mongodb/tokio-runtime"]
async-std-runtime = ["mongodb/async-std-runtime"]
chrono-0_4 = ["mongodb/bson-chrono-0_4"]