[package]
name = "mongodm"
version = "0.10.0"
authors = ["Benoît CORTIER <benoit.cortier@fried-world.eu>"]
edition = "2024"
description = "A thin ODM layer for mongodb"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Devolutions/mongodm-rs"
keywords = ["mongodb", "database", "nosql", "odm"]
categories = ["database"]
readme = "README.md"
include = ["src/**/*", "README.md", "CHANGELOG.md"]

[features]
default = ["compat-3-0-0", "rustls"]
compat-3-0-0 = ["mongodb/compat-3-0-0", "bson2"]
compat-3-3-0 = ["mongodb/compat-3-3-0", "bson3"]
bson-3 = ["mongodb/bson-3"]
openssl = ["mongodb/openssl-tls"]
rustls = ["mongodb/rustls-tls"]
chrono = ["bson2?/chrono-0_4", "bson3?/chrono-0_4"]

[dependencies]
mongodb = { version = "3", default-features = false, features = ["dns-resolver"] }
serde = { version = "1", features = ["derive"] }
futures-core = "0.3"
futures-util = "0.3"
async-trait = "0.1"
bson2 = { package = "bson", version = "2", optional = true }
bson3 = { package = "bson", version = "3", optional = true }

[dev-dependencies]
tokio = "1"
pretty_assertions = "1"
chrono = { version = "0.4.38", features = [ "serde" ] }

[lints.clippy]
doc_markdown = { level = "deny", priority = -1 }
missing_const_for_fn = { level = "allow" }
missing_errors_doc = { level = "allow" }
must_use_candidate = { level = "allow" }
return_self_not_must_use = { level = "allow" }